--- a/tema js lica/index.html
+++ b/tema js lica/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-      console.log('lica')  
-    </script>
+    <h1 onclick="myname()">Hello</h1>
+    <button onclick="apasat()">1</button>
+    <button onclick="apasat2()">2</button>
+    <button onmouseover="miscat()">3</button>
+    <script src="script.js"></script>
 </body>
 </html>
