--- a/M01S03/ex01/index.html
+++ b/M01S03/ex01/index.html
@@ -8,13 +8,22 @@
 
     <script>
       var object = {
-        name: 'Dragos', 
-        surname: 'Iordache', 
-        age: 32
+        name: 'Faris', 
+        surname: 'Ibrahim', 
+        age: 23,
+        carOwner: false
       };
 
-      console.log(object);
-      console.log(object.name);
+     //alert(object.name);
+     //alert(object.age);
+     // alert(object.carOwner);
+
+      console.log(`ma numesc  ${object.name} ${object.surname} 
+      si ${object.age} am ani`);
+      console.log('Ma numesc' + object.name + ' ' + object.surname + 'si am' + object.age + ' ani')
+      console.log(2019 - object.age / 2);
+      console.log('el este ' + object.name + ' ' + object.surname + ' si are ' + object.age + ' ani')
+      console.log(2019 - object.age ); 
     </script>
   </body>
 </html>
