--- a/tema js lica/index.html
+++ b/tema js lica/index.html
@@ -10,7 +10,7 @@
     <h1 onclick="myname()">Hello</h1>
     <button onclick="apasat()">1</button>
     <button onclick="apasat2()">2</button>
-    <button onmouseover="miscat()">3</button>
+    <button onclick="apasat3()" onmouseover="miscat()">3</button>
     <script src="script.js"></script>
 </body>
 </html>
