--- a/M01S05/ex08/index.html
+++ b/M01S05/ex08/index.html
@@ -5,8 +5,12 @@
     <title>Anonymous Functions</title>
 </head>
 <body>
-   
-    
+    <div>
+    <button id="clicker">salam</button>
+    <button id="RemoveEventButton">Mars</button>
+    <button id="query">Query</button>
+</div>
+    <p id="message"></p>
     <script src="app.js"></script>
 </body>
 </html>
