--- a/M01S06/ex05/index.html
+++ b/M01S06/ex05/index.html
@@ -7,7 +7,8 @@
 <body>
   
   <button id="showButton">Afiseaza alerta.</button>
-  <button id="toggleEventButton">Opreste Afisarea</button>
+  <button id="toggleEventButton">Opreste Afisarea.</button>
+  <button id="removeButtons">Remove</button>
   <script src="app.js"></script>
 </body>
 </html>
